--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -3,7 +3,7 @@
   top: 0;
   left: 0;
   width: 100%;
-  z-index: 1000;
+  z-index: 9999;
   background: transparent;
   transition: all 0.4s ease;
   padding: 20px 0;
